Fixing files