@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.*;
 import java.security.Principal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/orders")
@@ -54,7 +53,7 @@ public class OrderController {
         return orderRepository.findByOrderTimestampBetween(start, end)
                 .stream()
                 .map(orderService::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PutMapping("/{id}")
